<resources>
    <string name="app_name">HandFull</string>
    <string name="bebidas">Bebidas</string>
    <string name="salgados">Salgados</string>
    <string name="carrinho">Carrinho</string>
    <string name="cadastro">Cadastro</string>
    <string name="comprar">Comprar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="email">E-mail</string>
    <string name="promocoes">Promoções</string>
    <string name="desc_salgados">Super Baratos</string>
    <string name="desc_promo">Todos os Dias!</string>
    <string name="img_desc">Logo HandFull</string>
    <string name="menu">Menu</string>
    <string name="button_code">Código da Compra</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="sem_senha">Não Tem Senha?</string>
    <string name="cadastre">Cadastre-se!</string>
    <string name="hint_email">Digite Seu E-Mail</string>
    <string name="hint_senha">Insira Sua Senha</string>
    <string name="msg_code1">APRESENTE O CÓDIGO:</string>
    <string name="msg_code2">E RETIRE SEU LANCHE!</string>
</resources>
