<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="fill_parent"
    android:layout_height="728dp"
    android:background="@color/red"
    android:orientation="vertical"
    tools:context=".Menu">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="69dp">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="fill_parent"
            android:layout_height="74dp"
            android:background="@color/red"
            android:gravity="center"
            android:text="@string/menu"
            android:textColor="@color/yellow"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="157dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/img_desc"
            android:src="@drawable/handfull_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="235dp">

        <LinearLayout
            android:id="@+id/constraint_combo"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_combos"
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/yellow"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="4dp"
                app:cardElevation="16dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/info_combos"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:gravity="center_horizontal"
                            android:text="@string/salgados"
                            android:textColor="@color/red"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/info_desc_combos"
                            android:layout_width="match_parent"
                            android:layout_height="24dp"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:text="@string/desc_salgados"
                            android:textColor="@color/red"
                            android:textSize="12sp" />
                    </LinearLayout>
                </FrameLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/constraint_promo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_promo"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="4dp"
                app:cardElevation="16dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/info_promo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:gravity="center_horizontal"
                            android:text="@string/promocoes"
                            android:textColor="@color/red"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/info_desc_promo"
                            android:layout_width="match_parent"
                            android:layout_height="24dp"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:text="@string/desc_promo"
                            android:textColor="@color/red"
                            android:textSize="12sp" />
                    </LinearLayout>
                </FrameLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="152dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/carrinho"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:background="@color/white"
            android:fontFamily="sans-serif"
            android:text="@string/carrinho"
            android:textColor="@color/red"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/code"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/code"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:background="@color/white"
            android:fontFamily="sans-serif"
            android:text="@string/button_code"
            android:textColor="@color/red"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>